--- a/web/src/index.html
+++ b/web/src/index.html
@@ -2,9 +2,9 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>changeme</title>
+    <title>Mangrove</title>
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="changeme" />
+    <meta name="description" content="Mangrove" />
   </head>
 
   <body>
