--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Astrum</title>
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Mangrove" />
+    <meta name="description" content="Astrum" />
   </head>
 
   <body>
